More memory for unit tests